# learn-wasm

./: .gitignore  .rsw.json  .rswrc.json  README.md  awesome-lists.md  index.html  package-lock.json  package.json  rsw.toml  tsconfig.json  vercel.json  vite.config.deploy.ts  vite.config.ts  vite.deploy.ts
.github/workflows/: deploy.yml
@rsw/chasm/: Cargo.toml
@rsw/chasm/src/: basic.frag  basic.vert  lib.rs
@rsw/excel-read/: Cargo.toml  README.md
@rsw/excel-read/calamine/src/: auto.rs  lib.rs
@rsw/excel-read/src/: excel.rs  lib.rs  utils.rs
@rsw/excel-read/tests/: web.rs
@rsw/fractals/: Cargo.toml
@rsw/fractals/src/: main.rs
@rsw/game-of-life/: Cargo.toml
@rsw/game-of-life/src/: lib.rs
@rsw/teste/: Cargo.toml
@rsw/teste/src/: lib.rs
assets/: chasm.209b72a2.js  chasm.38e73bce.js  chasm.4f53c787.js  chasm.57533836.js  chasm.9b3cc5cf.js  chasm.a8523e11.js  chasm.bfb7a0be.js  chasm.c6f93dbb.js  chasm_bg.347a109c.wasm  excel_read.0d4d5d01.js  excel_read.11031c0d.js  excel_read.17d80409.js  excel_read.2f4b6afc.js  excel_read.46a1ea42.js  excel_read.5463b2d7.js  excel_read.634de99c.js  excel_read.6d27dc8f.js  excel_read.8ea1b5f0.js  excel_read.90c2be25.js  excel_read.fe97ac72.js  excel_read_bg.e81a672a.wasm  ffmpeg.030ac5f6.js  ffmpeg.7241ff93.js  ffmpeg.739005c9.js  ffmpeg.dac64afa.js  ffmpeg.dce17e2d.js  game_of_life.008da23c.js  game_of_life.048f6afd.js  game_of_life.0e085d15.js  game_of_life.435ef60b.js  game_of_life.5bbc4dfb.js  game_of_life.610aa468.js  game_of_life.6113664a.js  game_of_life.f77293d0.js  game_of_life_bg.30dcf3cc.wasm  home.0c13daed.js  home.1a6e947a.js  home.2d651e99.js  home.4fa0696f.js  home.574ddf21.js  (+45 more)
public/: CNAME
rust-crate/: Cargo.toml
rust-crate/pkg/: package.json  rust_crate.d.ts  rust_crate.js  rust_crate_bg.wasm  rust_crate_bg.wasm.d.ts
rust-crate/src/: chasm.rs  lib.rs
scripts/: wasm-copy.js
src/: App.tsx  index.css  index.scss  main.tsx  react-app-env.d.ts  routes.ts  routes.tsx
src/components/App/: App.css
src/hooks/: useWasm.ts
src/layouts/: base.tsx  index.scss
src/router/: RouteWithSubRoutes.tsx  Router.tsx  types.ts
src/views/: Home.tsx  chasm.tsx  excel_read.tsx  ffmpeg.tsx  game_of_life.tsx  home.tsx  teste.tsx
src/views/home/: index.tsx
